all buttons are on page

--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -1,3 +1,32 @@
 #trademark {
   font-size: 20px;
 }
+
+#titleJumbo{
+  color: white;
+  background-color: grey;
+}
+
+#teamForm{
+  width: 50%;
+  margin:auto;
+}
+
+#addTeamButton{
+  float:left;
+  margin-left: 20%;
+}
+#seeAllTeamsButton{
+
+  margin-left:20px;
+}
+#addMemberForm{
+  width:40%;
+}
+#seeAllTeamMembersButton{
+  margin-left:10px;
+}
+
+#addMemberButton{
+  float: left;
+}
